--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         <div id="footer">  
         	<a href="" target="_blank">AppStore</a>
-        	<a href="" target="_blank">Press Kit</a>
+            <a href="PressKit.zip">Press Kit</a>
         	<a href="support.html">Support</a>
         </div>
 
