--- a/support.html
+++ b/support.html
@@ -25,7 +25,7 @@
 
         <div id="footer">  
         	<a href="" target="_blank">AppStore</a>
-        	<a href="" target="_blank">Press Kit</a>
+        	<a href="PressKit.zip">Press Kit</a>
         	<a href="index.html">Home</a>
         </div>
 
