--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <div id="footer">  
-        	<a href="" target="_blank">AppStore</a>
+        	<a href="https://itunes.apple.com/us/app/codehorizon/id925056167?ls=1&mt=8" target="_blank">AppStore</a>
             <a href="PressKit.zip">Press Kit</a>
         	<a href="support.html">Support</a>
         </div>
