--- a/support.html
+++ b/support.html
@@ -24,7 +24,7 @@
         </div>
 
         <div id="footer">  
-        	<a href="" target="_blank">AppStore</a>
+        	<a href="https://itunes.apple.com/us/app/codehorizon/id925056167?ls=1&mt=8" target="_blank">AppStore</a>
         	<a href="PressKit.zip">Press Kit</a>
         	<a href="index.html">Home</a>
         </div>
