--- a/index.html
+++ b/index.html
@@ -8,15 +8,27 @@
     	<meta name="description" content="CodeHorizon App Site">
     	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:200,400,600">
     	<link rel="stylesheet" href="stylesheets/style.css">
+    	<script>
+		  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  	ga('create', 'UA-46474524-3', 'auto');
+		  	ga('send', 'pageview');
+
+		</script>
     </head>
 
     <body>
     	<h1>CodeHorizon</h1>
         <h4 align="center">Where Code meets Opportunity.</h4>
+        <div align="center"><a href="https://itunes.apple.com/in/app/codehorizon/id925056167?mt=8" target="itunes_store"><img src="images/AppStoreBadge.svg"></a></div>
         <div class="featureBox">
-            <img class="iPhoneB" src="images/iPhone-Black.png" style="top:285px; left:128px;float:left;">
-            <img class="innerImage" src="images/Upcoming.png" style="top:370px; left:149px;">
-            <div class="explaination" style="margin: 180px 30px 40px 300px;">
+        	<div class="imageContainerL">
+            	<img class="iPhoneB" src="images/CH1.png">
+            </div>
+            <div class="explaination" style="margin-top:130px;">
                 <h2>Battles on the Horizon</h2>
                 <p>
                     Forsee all the Upcoming algorithm battles, the time remaining for their commencement ~in the form of CountDown timer, and how long the contest will last once it starts.
@@ -28,9 +40,10 @@
         </div>
 
         <div class="featureBox">
-            <img class="iPhoneB" src="images/iPhone-Black.png" style="top:923px; left:1041px;float:left;">
-            <img class="innerImage" src="images/Live.png" style="top:1007px; left:1062px;">
-            <div class="explaination" style="margin: 180px 310px 40px 30px;">
+            <div class="imageContainerR">
+            	<img class="iPhoneB" src="images/CH2.png">
+            </div>
+            <div class="explaination" style="margin-top:150px;">
                 <h2>Geronimo!</h2>
                 <p>
                     View all the Live algorithm battles you can jump into, and the time remaining for them to end ~in the form of CountDown timer. The link-bubbles act the same as they do in the upcoming section.
@@ -39,9 +52,10 @@
         </div>
 
         <div class="featureBox">
-            <img class="iPhoneB" src="images/iPhone-Black.png" style="top:1561px; left:128px;float:left;">
-            <img class="innerImage" src="images/Notifications.png" style="top:1646px; left:149px;">
-            <div class="explaination" style="margin: 180px 30px 40px 300px;">
+            <div class="imageContainerL">
+            	<img class="iPhoneB" src="images/CH3.png">
+            </div>
+            <div class="explaination" style="margin-top:130px;">
                 <h2>Pick Sides</h2>
                 <p>
                     Click on the rows to switch notifications ON-OFF for all contests of a particular host. The hosts with notifications ON will display the notification time. Default notification time for all hosts is set to 1 hour i.e. You'll recieve a notification 1 hour before the contests start on that particular host-site. 
@@ -50,9 +64,10 @@
         </div>
 
         <div class="featureBox">
-            <img class="iPhoneB" src="images/iPhone-Black.png" style="top:2199px; left:1041px;float:left;">
-            <img class="innerImage" src="images/NotificationTime.png" style="top:2284px; left:1062px;">
-            <div class="explaination" style="margin: 180px 310px 40px 30px;">
+            <div class="imageContainerR">
+            	<img class="iPhoneB" src="images/CH4.png">
+            </div>
+            <div class="explaination" style="margin-top:150px;">
                 <h2>Sound the alarm</h2>
                 <p>
                     On clicking the button displaying notification time in the notification cell, you'll be able to modify the notifcation time for the selected host. Set the notification time that suits you the best and never miss a contest again.
