--- a/support.html
+++ b/support.html
@@ -8,6 +8,16 @@
     	<meta name="description" content="CodeHorizon Support Site">
     	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:200,400,600">
     	<link rel="stylesheet" href="stylesheets/style.css">
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-46474524-3', 'auto');
+            ga('send', 'pageview');
+
+        </script>
     </head>
 
     <body>
@@ -17,9 +27,9 @@
         <div class="support">
             <h2>Get in touch!</h2>
             <p>
-                For shorter conversations ~ <a href="https://twitter.com/ChintanGhate" target="_blank">tweet</a>
+                Quick questions, fast answers ~ <a href="https://twitter.com/intent/tweet?screen_name=ChintanGhate&amp;hashtags=CodeHorizon" target="_blank">@ChintanGhate</a>
             </br>
-               For longer conversations ~ <a href="mailto:chintanghate@gmail.com" target="_blank">mail</div></a>
+                Big questions, slower answers ~ <a href="mailto:chintanghate@gmail.com" target="_blank">chintanghate@gmail.com</div></a>
             </p>
         </div>
 
