--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
     	<h1>CodeHorizon</h1>
         <h4 align="center">Where Code meets Opportunity.</h4>
-        <div align="center"><a id="AppStoreBadge" href="https://itunes.apple.com/in/app/codehorizon/id925056167?mt=8" target="itunes_store"></a></div>
+        <div align="center"><a href="https://itunes.apple.com/in/app/codehorizon/id925056167?mt=8" target="itunes_store"><img id="AppStoreBadge" src="images/AppStoreBadge.png"></a></div>
         <div class="featureBox">
         	<div class="imageContainerL">
             	<img class="iPhoneB" src="images/CH1.png">
