--- a/bugs.html
+++ b/bugs.html
@@ -24,13 +24,21 @@
     	<h1>CodeHorizon</h1>
         <h4 align="center">Where Code meets Opportunity.</h4>
 
+
         <div class="support">
-            <h2>Get in touch!</h2>
-            <p>
-                Quick questions, fast answers ~ <a href="https://twitter.com/intent/tweet?screen_name=ChintanGhate&amp;hashtags=CodeHorizon" target="_blank">@ChintanGhate</a>
-            </br>
-                Big questions, slower answers ~ <a href="mailto:chintanghate@gmail.com" target="_blank">chintanghate@gmail.com</a>
-            </p>
+        	<h2>Bugs</h2>
+        	<p>I am sorry for any inconvenience caused when the app doesn't work as it is supposed to, but I'll make sure that the inconvenience is short-lived by fixing all the bugs, as soon as possible. Please inform me if you experience any difficulties in the app, or if something feels out of place. I'll fix it. :)
+        	</p>
+        	<p>I'll be noting the discoverd bugs below, and striking them off as soon as they are resolved.
+        	</br>
+        		Please mail me any problems you find with the app ~ <a href="mailto:chintanghate@gmail.com" target="_blank">chintanghate@gmail.com</a>
+        	</br>
+        		Thank you.
+        	</p>
+            <h3>Version 1.0</h3>
+            	<ul>
+            		<li>Notifications are not working in iOS7 devices.</li>
+            	</ul>
         </div>
 
         <div id="footer">  
