--- a/bugs.html
+++ b/bugs.html
@@ -27,7 +27,7 @@
 
         <div class="support">
         	<h2>Bugs</h2>
-        	<p>I am sorry for any inconvenience caused when the app doesn't work as it is supposed to, but I'll make sure that the inconvenience is short-lived by fixing all the bugs, as soon as possible. Please inform me if you experience any difficulties in the app, or if something feels out of place. I'll fix it. :)
+        	<p>I am sorry for any inconvenience caused when the app doesn't work as it is supposed to, but I'll make sure that the inconvenience is short-lived by fixing all the bugs, as soon as possible. Please inform me if you experience any difficulties in the app, or if something feels out of place. I'll fix it.
         	</p>
         	<p>I'll be noting the discoverd bugs below, and striking them off as soon as they are resolved.
         	</br>
