--- a/bugs.html
+++ b/bugs.html
@@ -44,7 +44,7 @@
         <div id="footer">  
         	<a href="https://itunes.apple.com/us/app/codehorizon/id925056167?ls=1&mt=8" target="_blank">AppStore</a>
         	<a href="PressKit.zip">Press Kit</a>
-        	<a href="/">Home</a>
+        	<a href="/CodeHorizon">Home</a>
         </div>
 
         <div id="copyright"> &copy; 2014 <a href="http://www.star-lord.me/"  target="_blank"> Chintan Ghate </a></div>
