--- a/bugs.html
+++ b/bugs.html
@@ -37,7 +37,7 @@
         	</p>
             <h3>Version 1.0</h3>
             	<ul>
-            		<li>Notifications are not working in iOS7 devices.</li>
+            		<li><strike>Notifications are not working in iOS7 devices.</strike></li>
             	</ul>
         </div>
 
