--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
     <body>
     	<h1>CodeHorizon</h1>
         <h4 align="center">Where Code meets Opportunity.</h4>
-        <div align="center"><a href="https://itunes.apple.com/in/app/codehorizon/id925056167?mt=8" target="itunes_store"><img id="AppStoreBadge" src="images/AppStoreBadge.png"></a></div>
+        <div align="center">
+        	<a href="https://itunes.apple.com/in/app/codehorizon/id925056167?mt=8" target="itunes_store">	<img id="AppStoreBadge" src="images/AppStoreBadge.png">
+        	</a>
+        	</br>
+        	<a href="https://play.google.com/store/apps/details?id=com.chintanghate.CodeHorizon">
+			  <img id="AppStoreBadge" alt="Get it on Google Play" src="images/googlePlayBadge.png" />
+			</a>        
+		</div>
         <div class="featureBox">
         	<div class="imageContainerL">
             	<img class="iPhoneB" src="images/CH1.png">
@@ -78,6 +85,7 @@
 
         <div id="footer">  
         	<a href="https://itunes.apple.com/us/app/codehorizon/id925056167?ls=1&mt=8" target="_blank">AppStore</a>
+        	<a href="https://play.google.com/store/apps/details?id=com.chintanghate.CodeHorizon" target="_blank">GooglePlay</a>
             <a href="PressKit.zip">Press Kit</a>
         	<a href="support.html">Support</a>
             <a href="bugs.html">Report a bug</a>
